--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
+    "arlocal": "^1.1.30",
     "arweave": "^1.10.23",
     "fs": "^0.0.1-security",
     "react": "^17.0.2",
